# OrganizedPointFilters

./: .gitignore  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  conftest.py  dev-requirements.txt  pytest.ini  requirements.txt  setup.py
.github/workflows/: tests.yml  wheels.yml
bench/: CMakeLists.txt  bench-image.cpp  bench-lib.cpp  bench-opc.cpp  conftest.py  run-bench.cpp
bench/Python/: test_bilateral.py  test_cuda.py  test_laplacian.py
bench/records/: 07_02_2020.txt
cmake/: Extras.cmake
docs/: .buildinfo  Doxyfile  builddocs.html  builddocs.rst  genindex.html  index.html  index.rst  introduction.html  make_docs.py  objects.inv  search.html  searchindex.js
docs/.doctrees/: builddocs.doctree  environment.pickle  index.doctree  introduction.doctree
docs/_sources/: index.rst.txt
docs/cpp_api/: classOrganizedPointFilters_1_1Helper_1_1Timer.html  class_organized_point_filters_1_1_helper_1_1_timer.html  class_view_hierarchy.html  cpp_library_root.html  define_Bilateral_8hpp_1a6ff7aef607123c6dc41484ba289fe21e.html  define_Bilateral_8hpp_1a71cc5540066e0ef3b77e305ef5259efd.html  define_Bilateral_8hpp_1a773172382e2484dfa21a020c5a98daa3.html  define_Bilateral_8hpp_1ac4c017f33d802b4f4f2863f69b838c22.html  define_Laplacian_8hpp_1a0855e38ec835f00750b2561877542c32.html  define_Laplacian_8hpp_1a17d51190792a0d04a81fb663fd8d799c.html  define_Laplacian_8hpp_1a78b3c25efa819f92938531ff5624f02d.html  define_Laplacian_8hpp_1a99e8eee63fd5ac8a240dd5001207b6ae.html  define_Laplacian_8hpp_1a9a6b01817fa44c7910ed98fd49d8b8eb.html  define_Laplacian_8hpp_1ab53328405fd9ba89990d9426d0e6389e.html  define_Normal_8hpp_1ac3629d4f4a11d2ee990a0520c5f26ebd.html  define__bilateral_8hpp_1a6ff7aef607123c6dc41484ba289fe21e.html  define__bilateral_8hpp_1a71cc5540066e0ef3b77e305ef5259efd.html  define__bilateral_8hpp_1a773172382e2484dfa21a020c5a98daa3.html  define__bilateral_8hpp_1ac4c017f33d802b4f4f2863f69b838c22.html  define__laplacian_8hpp_1a0855e38ec835f00750b2561877542c32.html  define__laplacian_8hpp_1a17d51190792a0d04a81fb663fd8d799c.html  define__laplacian_8hpp_1a78b3c25efa819f92938531ff5624f02d.html  define__laplacian_8hpp_1a99e8eee63fd5ac8a240dd5001207b6ae.html  define__laplacian_8hpp_1a9a6b01817fa44c7910ed98fd49d8b8eb.html  define__laplacian_8hpp_1ab53328405fd9ba89990d9426d0e6389e.html  define__normal_8hpp_1ac3629d4f4a11d2ee990a0520c5f26ebd.html  dir_include.html  dir_include_OrganizedPointFilters.html  dir_include_OrganizedPointFilters_Filter.html  dir_include_OrganizedPointFilters_RS.html  file_include_OrganizedPointFilters_Filter_Bilateral.hpp.html  file_include_OrganizedPointFilters_Filter_Decimate.hpp.html  file_include_OrganizedPointFilters_Filter_Laplacian.hpp.html  file_include_OrganizedPointFilters_Filter_Normal.hpp.html  file_include_OrganizedPointFilters_Helper.hpp.html  file_include_OrganizedPointFilters_OrganizedPointFilters.hpp.html  file_include_OrganizedPointFilters_RS_DisparityTransform.hpp.html  file_include_OrganizedPointFilters_RS_RS.hpp.html  file_include_OrganizedPointFilters_RS_SpatialFilter.hpp.html  file_include_OrganizedPointFilters_Types.hpp.html  (+93 more)
docs/python_api/: organizedpointfilters.Matrix3f.html  organizedpointfilters.Matrix3fRef.html  organizedpointfilters.OrganizedTriangleMatrix.html  organizedpointfilters.cuda.kernel.bilateral_K3_cuda.html  organizedpointfilters.cuda.kernel.html  organizedpointfilters.cuda.kernel.laplacian_K3_cuda.html  organizedpointfilters.cuda.kernel.laplacian_K5_cuda.html  organizedpointfilters.filter.bilateral_K3.html  organizedpointfilters.filter.compute_normals.html  organizedpointfilters.filter.compute_normals_and_centroids.html  organizedpointfilters.filter.decimate_column_K2.html  organizedpointfilters.filter.decimate_column_K3.html  organizedpointfilters.filter.decimate_column_K4.html  organizedpointfilters.filter.html  organizedpointfilters.filter.laplacian_K3.html  organizedpointfilters.filter.laplacian_K5.html  organizedpointfilters.get_opf_version.html  organizedpointfilters.html  organizedpointfilters.utility.helper.Matrix3f.html  organizedpointfilters.utility.helper.Matrix3fRef.html  organizedpointfilters.utility.helper.MatrixDouble.html  organizedpointfilters.utility.helper.Path.html  organizedpointfilters.utility.helper.bilateral_opc.html  organizedpointfilters.utility.helper.bilateral_opc_cuda.html  organizedpointfilters.utility.helper.compute_normals_and_centroids_opc.html  organizedpointfilters.utility.helper.compute_normals_opc.html  organizedpointfilters.utility.helper.create_mesh_from_organized_point_cloud.html  organizedpointfilters.utility.helper.create_mesh_from_organized_point_cloud_with_o3d.html  organizedpointfilters.utility.helper.create_meshes.html  organizedpointfilters.utility.helper.create_meshes_cuda.html  organizedpointfilters.utility.helper.get_np_buffer_ptr.html  organizedpointfilters.utility.helper.html  organizedpointfilters.utility.helper.laplacian_opc.html  organizedpointfilters.utility.helper.laplacian_opc_cuda.html  (+6 more)
src/: CMakeLists.txt  version.txt
src/OrganizedPointFilters/: CMakeLists.txt  Filters.cpp  Helper.cpp  OPFConfig.cpp  OPFConfig.hpp.in  OrganizedPointFilters.cpp  SpatialFilter.cpp
src/Python/: CMakeLists.txt  MANIFEST.in  README.md  make_python_package.cmake  setup.py
src/Python/organizedpointfilters/: __init__.py
src/Python/organizedpointfilters/cuda/: __init__.py  bilateral.cu  kernel.py  laplacian.cu  laplacian_check.cu
src/Python/organizedpointfilters/utility/: helper.py  o3d_util.py
src/Python/organizedpointfilters_pybind/: organizedpointfilters_pybind.cpp  organizedpointfilters_pybind.hpp
src/Python/organizedpointfilters_pybind/docstring/: docstring.cpp  docstring.hpp
src/Python/organizedpointfilters_pybind/filter/: filter.cpp  filter.hpp
src/Python/organizedpointfilters_pybind/kernel/: kernel.cpp  kernel.hpp
src/Python/organizedpointfilters_pybind/types/: bind_types.cpp  bind_types.hpp
src_docs/: builddocs.rst  conf.py  index.rst  introduction.rst  make_docs.py
tests/: CMakeLists.txt  test-organizedpointfilters.cpp
(+394 files in other folders)
